--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vacay !! (∪.∪ )...zzz</title>
     <link rel="icon" type ="image/png" href="assets/coconut.png"/>
+    <link rel="stylesheet" href="style.css">
     <style> body {padding: 0; margin: 0;} </style>
     <script src="p5.js"></script>
     <script src="p5.2DAdventure.js"></script>
